force-app/main/default/objects/ht_ProducerAddress__c/ht_ProducerAddress__c.object-meta.xml
<CustomObject>
    <label>NIPR Producer Address</label>
    <nameField>
        <displayFormat>PRA-{0000}</displayFormat>
        <label>Producer Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NIPR Producer Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>