force-app/main/default/objects/ht_ProducerAddress__c/fields/Different_from_Other_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Different_from_Other_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Different from Other Addresses</label>
    <type>Checkbox</type>
</CustomField>