force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_AddressLineOne__c.field-meta.xml
<CustomField>
    <fullName>ht_AddressLineOne__c</fullName>
    <label>Address Line One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>