force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_AddressLineThree__c.field-meta.xml
<CustomField>
    <fullName>d4c_AddressLineThree__c</fullName>
    <label>Address Line Three</label>
    <length>255</length>
    <type>Text</type>
</CustomField>