force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_AddressLineTwo__c.field-meta.xml
<CustomField>
    <fullName>d4c_AddressLineTwo__c</fullName>
    <label>Address Line Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>