force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_AddressType__c.field-meta.xml
<CustomField>
    <fullName>ht_AddressType__c</fullName>
    <label>Address Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>