force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>ht_AsOfDate__c</fullName>
    <label>As Of Date</label>
    <type>Date</type>
</CustomField>