force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_City__c.field-meta.xml
<CustomField>
    <fullName>ht_City__c</fullName>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>