force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>ht_CountryCode__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>