force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>ht_PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>