force-app/main/default/objects/ht_ProducerAddress__c/fields/ht_State__c.field-meta.xml
<CustomField>
    <fullName>ht_State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>