force-app/main/default/objects/ht_ProducerAddress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>d4c_AddressLineOne__c</columns>
    <columns>d4c_AddressType__c</columns>
    <columns>d4c_PostalCode__c</columns>
    <columns>d4c_Producer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>